[gd_scene load_steps=2 format=3 uid="uid://dq3xryn0vsn8s"]

[ext_resource type="Script" path="res://scenes/ui/title_screen/title_screen.gd" id="1_bjuk2"]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_bjuk2")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAY"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"
